2011-02-10  Alan Modra  <amodra@gmail.com>

	* scripttempl/armbpabi.sc: Revert 2010-11-02  H.J. Lu.
	* scripttempl/avr.sc: Likewise.
	* scripttempl/elf32cr16.sc: Likewise.
	* scripttempl/elf32crx.sc: Likewise.
	* scripttempl/elf32msp430.sc: Likewise.
	* scripttempl/elf32msp430_3.sc: Likewise.
	* scripttempl/elf32sh-symbian.sc: Likewise.
	* scripttempl/elf64hppa.sc: Likewise.
	* scripttempl/elf_chaos.sc: Likewise.
	* scripttempl/elfd10v.sc: Likewise.
	* scripttempl/elfd30v.sc: Likewise.
	* scripttempl/elfi370.sc: Likewise.
	* scripttempl/elfm68hc11.sc: Likewise.
	* scripttempl/elfm68hc12.sc: Likewise.
	* scripttempl/elfxtensa.sc: Likewise.
	* scripttempl/ip2k.sc: Likewise.
	* scripttempl/iq2000.sc: Likewise.
	* scripttempl/mep.sc: Likewise.
	* scripttempl/mmo.sc: Likewise.
	* scripttempl/v850.sc: Likewise.
	* scripttempl/xstormy16.sc: Likewise.
	* scripttempl/elf.sc: Revert 2010-10-29  H.J. Lu.

2011-02-10  Alan Modra  <amodra@gmail.com>

	Apply from mainline
	2010-11-08  Thomas Schwinge  <thomas@schwinge.name>
	* configure.host: Add stanza for *-*-gnu*.

2011-02-01  Alan Modra  <amodra@gmail.com>

	Backport from mainline
	2011-01-22  H.J. Lu  <hongjiu.lu@intel.com>
	* Makefile.am (CXX): Removed.
	* configure.in: Add AC_PROG_CXX.
	* Makefile.in: Regenerated.
	* configure: Likewise.

	2011-01-22  Richard Sandiford  <rdsandiford@googlemail.com>
	* plugin.c (plugin_get_ir_dummy_bfd): Copy across the bfd's
	private data and GP size.

	2011-01-21  Alan Modra  <amodra@gmail.com>
	* ldexp.c (fold_binary): Set result section for arithmetic and
	logical operations to NULL when both operands are in same section.
	* ld.texinfo (Expression Section): Describe this.

	2011-01-14  Alan Modra  <amodra@gmail.com>
	* ldmain.c (main): Flush stdout before and stderr after printing
	message.
	* ldmisc.c (einfo): Similarly.
	* plugin.c (message): Likewise.
	* emultempl/ppc64elf.em: Likewise.
	* emultempl/xtensaelf.em: Likewise.
	* emulparams/elf32mcore.sh: Use einfo rather than printf.