@@ -1,3 +1,12 @@
+2011-02-14  Alan Modra  <amodra@gmail.com>
+
+	* ldmain.c (remove_output): Rename to..
+	(ld_cleanup): ..this. Call bfd_cache_close_all and plugin_call_cleanup.
+	(main): Adjust.
+	* plugin.c (plugin_call_cleanup): Make global.
+	(plugin_load_plugins): Don't register plugin_call_cleanup with xatexit.
+	* plugin.h (plugin_call_cleanup): Declare.
+
 2011-02-10  Alan Modra  <amodra@gmail.com>
 
 	* scripttempl/armbpabi.sc: Revert 2010-11-02  H.J. Lu.
